# matrix-to-rss

./: .env.example  .gitignore  Cargo.toml
src/: bot.rs  main.rs  server.rs
