[package]
name = "matrix-to-rss"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = "0.16.0"
rss = { version = "2.0.12", default-features = false, features = ["builders", "url"] }
dotenv = "0.15.0"

reqwest = { version = "0.13.2", features = ["rustls"] }
hyper = { version = "1.8.1", default-features = false, features = ["server", "http1"]}
hyper-util = { version = "0.1.20", default-features = false, features = ["tokio", "server"] }
http-body-util = { version = "0.1.3", default-features = false }
urlencoding = "2.1.3"

tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

anyhow = "1.0.101"
once_cell = "1.21.3"
parking_lot = { version = "0.12.5", features = ["serde", "send_guard"] }
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.3"

log = "0.4.29"
tracing-subscriber = "0.3.22"